[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1040.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 64.0
text = "Hydrohomie Adventure"
align = 1

[node name="Separator" type="Control" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1040.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 186.0
margin_right = 1040.0
margin_bottom = 466.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 280.0

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 336.0
margin_bottom = 64.0
text = "Play"

[node name="Separator4" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 336.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 336.0
margin_bottom = 136.0
text = "Level Select"

[node name="Separator5" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 336.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsButtons" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 336.0
margin_bottom = 208.0
text = "Settings"

[node name="Separator6" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 336.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 336.0
margin_bottom = 280.0
text = "Quit"

[node name="Separator3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 1040.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="VBoxContainer"]
margin_top = 470.0
margin_right = 1040.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelSelect" type="PopupDialog" parent="."]
margin_right = 992.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="LevelSelect"]
margin_right = 992.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelSelect/VBoxContainer2"]
margin_right = 992.0
margin_bottom = 64.0
text = "Select Level"
align = 1

[node name="Separator3" type="Control" parent="LevelSelect/VBoxContainer2"]
margin_top = 68.0
margin_right = 992.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="LevelSelect/VBoxContainer2"]
margin_top = 202.0
margin_right = 992.0
margin_bottom = 402.0

[node name="Separator" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_right = 85.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 89.0
margin_right = 233.0
margin_bottom = 200.0
text = "Back"

[node name="Separator2" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 237.0
margin_right = 322.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 326.0
margin_right = 902.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
script = ExtResource( 2 )

[node name="Button" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_right = 112.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1-1"

[node name="Button2" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 116.0
margin_right = 228.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1-2"

[node name="Button3" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 232.0
margin_right = 344.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1-3"

[node name="Button4" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 348.0
margin_right = 460.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1-4"

[node name="Button5" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 464.0
margin_right = 576.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1-5"

[node name="Button6" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_top = 68.0
margin_right = 112.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2-1"

[node name="Button7" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 116.0
margin_top = 68.0
margin_right = 228.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2-2"

[node name="Button8" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 232.0
margin_top = 68.0
margin_right = 344.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2-3"

[node name="Button9" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 348.0
margin_top = 68.0
margin_right = 460.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2-4"

[node name="Button10" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 464.0
margin_top = 68.0
margin_right = 576.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2-5"

[node name="Button11" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_top = 136.0
margin_right = 112.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3-1"

[node name="Button12" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 116.0
margin_top = 136.0
margin_right = 228.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3-2"

[node name="Button13" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 232.0
margin_top = 136.0
margin_right = 344.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3-3"

[node name="Button14" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 348.0
margin_top = 136.0
margin_right = 460.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3-4"

[node name="Button15" type="Button" parent="LevelSelect/VBoxContainer2/HBoxContainer/GridContainer"]
margin_left = 464.0
margin_top = 136.0
margin_right = 576.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3-5"

[node name="Separator4" type="Control" parent="LevelSelect/VBoxContainer2/HBoxContainer"]
margin_left = 906.0
margin_right = 992.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="LevelSelect/VBoxContainer2"]
margin_top = 406.0
margin_right = 992.0
margin_bottom = 537.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="PopupDialog" parent="."]
visible = true
margin_right = 992.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings"]
margin_right = 992.0
margin_bottom = 537.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/VBoxContainer2"]
margin_right = 992.0
margin_bottom = 64.0
text = "Settings"
align = 1

[node name="Separator" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 68.0
margin_right = 992.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator3" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 203.0
margin_right = 992.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer2"]
margin_top = 338.0
margin_right = 992.0
margin_bottom = 402.0

[node name="Separator" type="Control" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_right = 420.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_left = 424.0
margin_right = 568.0
margin_bottom = 64.0
text = "Back"

[node name="Separator2" type="Control" parent="Settings/VBoxContainer2/HBoxContainer"]
margin_left = 572.0
margin_right = 992.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="Settings/VBoxContainer2"]
margin_top = 406.0
margin_right = 992.0
margin_bottom = 537.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/SettingsButtons" to="." method="_on_SettingsButtons_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="LevelSelect/VBoxContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer2/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
